--- a/site/source/index.html
+++ b/site/source/index.html
@@ -1,7 +1,7 @@
 <script>
-  var language = window.navigator.userLanguage || window.navigator.language;
+  const language = window.navigator.userLanguage || window.navigator.language;
   if (language.toLowerCase().indexOf("pl") !== -1)
-    window.location.replace("/pl")
+    window.location.replace("/pl");
   else
-    window.location.replace("/en")
+    window.location.replace("/en");
 </script>
